cleaned up lint errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-	"cSpell.words": ["aipromptgenerator"]
+	"cSpell.words": [
+		"aipromptgenerator",
+		"Cupertino",
+		"prefs",
+		"Schyler"
+	]
 }
